--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
     "migrate": "prisma migrate dev",
     "studio": "prisma studio",
     "seed": "ts-node prisma/seed.ts",
-    "test2": "jest",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "keywords": [],
@@ -23,13 +22,12 @@
     "@prisma/client": "^7.0.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dan": "^0.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.28.5",
     "@jest/globals": "^30.2.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
@@ -37,7 +35,6 @@
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "@types/supertest": "^6.0.3",
-    "cross-env": "^10.1.0",
     "jest": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
     "nodemon": "^3.1.11",
@@ -47,5 +44,8 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
